fix aliquot